--- a/dicoding/package.json
+++ b/dicoding/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dicoding",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -16,5 +15,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "description": ""
 }
